--- a/backend-ia/.env
+++ b/backend-ia/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="API_DO_OPENAI"
